--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,7 +17,7 @@ eggs =
     django-filebrowser
     linaro-django-pagination
     South
-    django-export
+    sorl-thumbnail
 
 [admin]
 recipe = djangorecipe
