--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,6 +2,10 @@
 parts = 
     deps
     codesi
+find-links =
+    https://github.com/sehmaschine/django-grappelli/tarball/master#egg=django-grappelli
+    https://github.com/ONGEI/django-project-admin/tarball/master#egg=django-project-admin
+versions=versions
 
 [deps]
 recipe = djangorecipe
@@ -9,6 +13,10 @@ eggs =
     MySQL-python
     PIL
     django-grappelli
+    South
+    linaro-django-pagination
+    django-filebrowser
+    django-project-admin
 
 [codesi]
 recipe = djangorecipe
@@ -22,3 +30,6 @@ wsgi = true
 extra-paths =
     src
     src/apps
+
+[versions]
+django = 1.3.1
